# metadataset

./: pyproject.toml
metadataset/: __init__.py  cli.py
metadataset/download/: decompress.py  fetcher.py  manager.py  splits.py  summary.py  validate.py
metadataset/preprocess/: __init__.py  config.py  core.py  helpers.py
metadataset/utils/: io.py  logging.py
